--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "liveServer.settings.multiRootWorkspaceName": "lab-01"
+    "liveServer.settings.multiRootWorkspaceName": "lab-01",
+    "liveServer.settings.port": 5501
 }
